[gd_scene load_steps=7 format=3 uid="uid://clyd08pd34825"]

[ext_resource type="Script" path="res://HUD.gd" id="1_hiusm"]
[ext_resource type="FontFile" uid="uid://caurlwle2vhw6" path="res://fonts/barcade.ttf" id="2_6dgsy"]
[ext_resource type="PackedScene" uid="uid://c56nor43qs8f6" path="res://block.tscn" id="2_wvibg"]
[ext_resource type="Theme" uid="uid://dh7h3vxbayh3m" path="res://font.tres" id="3_kisdl"]
[ext_resource type="Texture2D" uid="uid://sja11p2j506j" path="res://volume.png" id="3_n04av"]
[ext_resource type="FontFile" uid="uid://bd6oxweu45qsq" path="res://fonts/barcadenobar.ttf" id="6_68qii"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hiusm")

[node name="MainTitle" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -265.5
offset_top = 200.0
offset_right = 265.5
offset_bottom = 307.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.301961, 0.301961, 1)
theme_override_fonts/font = ExtResource("2_6dgsy")
theme_override_font_sizes/font_size = 60
text = "OctoBlocks"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartTimeButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 42.5
offset_right = 100.0
offset_bottom = 102.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_kisdl")
theme_override_font_sizes/font_size = 30
text = "Time Trial"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_kisdl")
theme_override_font_sizes/font_size = 30
text = "Survival
"

[node name="PreviewBlock" parent="." instance=ExtResource("2_wvibg")]
position = Vector2(194, 820)
number = 4

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 1.0
offset_top = 79.0
offset_right = 1.0
offset_bottom = 151.0
grow_horizontal = 2
theme = ExtResource("3_kisdl")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextBlockLabel2" type="Label" parent="ScoreLabel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -205.0
offset_top = 628.0
offset_right = -101.0
offset_bottom = 659.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Stone in"

[node name="NextBlockLabel" type="Label" parent="ScoreLabel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = 628.0
offset_right = 52.0
offset_bottom = 659.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Next Block"

[node name="StoneCounter" type="Label" parent="ScoreLabel"]
layout_mode = 0
offset_left = 22.0
offset_top = 728.0
offset_right = 62.0
offset_bottom = 751.0
theme_override_colors/font_color = Color(1, 0.301961, 0.301961, 1)
theme_override_font_sizes/font_size = 25
text = "10 turns"

[node name="Volume" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -76.0
offset_top = 21.0
offset_right = 444.0
offset_bottom = 541.0
grow_horizontal = 0
scale = Vector2(0.1, 0.1)
icon = ExtResource("3_n04av")
flat = true

[node name="Blocks" type="Node2D" parent="."]
visible = false
position = Vector2(2.08165e-12, -305)

[node name="Block3" parent="Blocks" instance=ExtResource("2_wvibg")]
position = Vector2(120, 1220)
number = 7

[node name="Block2" parent="Blocks" instance=ExtResource("2_wvibg")]
position = Vector2(60, 1220)
number = 3

[node name="Block5" parent="Blocks" instance=ExtResource("2_wvibg")]
position = Vector2(2.08165e-12, 1100)
number = 6

[node name="Block6" parent="Blocks" instance=ExtResource("2_wvibg")]
position = Vector2(60, 1160)
number = 5

[node name="Block4" parent="Blocks" instance=ExtResource("2_wvibg")]
position = Vector2(2.08165e-12, 1160)
number = 4

[node name="Block" parent="Blocks" instance=ExtResource("2_wvibg")]
position = Vector2(2.08165e-12, 1220)
number = 4

[node name="GridBackground" type="ColorRect" parent="."]
visible = false
offset_left = 15.0
offset_top = 150.0
offset_right = 435.0
offset_bottom = 750.0
color = Color(0.8, 0.8, 0.8, 1)

[node name="GameOver" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -200.0
offset_right = 175.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverTitle" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_top = 20.0
offset_right = 46.0
offset_bottom = 46.0
grow_horizontal = 2
theme = ExtResource("3_kisdl")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Game Over!"

[node name="ScoreText" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -120.0
offset_right = 38.0
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_68qii")
theme_override_font_sizes/font_size = 25
text = "Score"

[node name="ScoreLabel" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -95.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_68qii")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoHomeButton" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 80.0
offset_right = 90.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_kisdl")
theme_override_font_sizes/font_size = 30
text = "Home"

[node name="PlayAgainButton" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_kisdl")
theme_override_font_sizes/font_size = 30
text = "Play Again"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Volume" to="." method="_on_volume_button_pressed"]
[connection signal="pressed" from="GameOver/GoHomeButton" to="." method="_on_go_home_button_pressed"]
[connection signal="pressed" from="GameOver/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
